learn sample